<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">상품가격관찰자</string>
    <string name="action_settings">Settings</string>
    <string name="network_error">network error</string>
    <string name="bad_url">bad url</string>
    <string name="url_default">http://prod.danawa.com/info/?pcode=1596012&amp;cate1=861&amp;cate2=874&amp;cate3=11043&amp;cate4=0</string>
    <string name="dn">download</string>
    <string name="dn2">2</string>
    <string name="dn3">3</string>
    <string name="parse">parse</string>
    <string name="show">showdb</string>
    <string name="title_activity_main">관찰자</string>
    <string name="dn_parse_insert">Dn,Parse,Insert</string>
    <string name="product_list">Product List</string>
    <string name="ready">ready.</string>
    <string name="title_activity_http_conn_parse_db">다운로드,파스,추가</string>
    <string name="title_activity_product_list">관찰상품목록</string>
    <string name="hello_world">Hello world!</string>
    <string name="service_start">Service Start</string>
    <string name="service_stop">Service Stop</string>

</resources>